# asjdhx-aosx-asj1

./: .gitignore  Cargo.toml  README.md  RESEARCH.md  anti_debug.cpp  anti_debug.h  anti_debug_internal.h  anti_sandbox.h  anti_sandbox_test  anti_vm.h  build.rs  fuhrer.txt  gaysex.ps1  key.rs  main.cpp  main.js  main.py  new_stub.cpp  obf.py  obin_generator.py  payload.rs  server.js  sex.ps1  test_input.txt
data/: users.json
includes/: anti_debug.h  anti_sandbox.h  anti_vm.h
json/: config.json  methods.json  users.json
new_Stub/: injector.cpp  syscalls.cpp  syscalls.h
obfuscator/: Cargo.toml
obfuscator/src/: lib.rs
public/: dashboard.html  index.html
public/css/: style.css
public/js/: auth.js  dashboard.js  utils.js
signatures/: sample.yaml
src/: anti_analysis.rs  antidll.rs  disk.rs  error.rs  filecopy.rs  filesystem.rs  generated_signatures.rs  hwid.rs  lib.rs  lnkspawner.rs  main.rs  obfuscated.rs  obfuscation.rs  persistence.rs  process.rs  processutils.rs  registry.rs  regprotect.rs  services.rs  signatures.rs  syscall.rs  syscalls.rs  syscalls_filecopy.rs  tasks.rs  user.rs  winapi_util.rs
templates/cpp/: main.cpp  obf.h
utils/: obf.py
