[package]
name = "directsyscall"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.48.0", features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_System_LibraryLoader"
] }
windows-sys = { version = "0.48.0", features = [
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Kernel",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming"
] }
