[package]
name = "directsyscall"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.48.0", features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading"
] }
windows-sys = { version = "0.48.0", features = [
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Kernel",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Registry",
    "Win32_System_Time",
    "Win32_UI_WindowsAndMessaging"
] }
base64 = "0.21.0"
